<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">

    <RelativeLayout android:id="@+id/rl_fragment_setting_theme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/listItemHeight"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/selector_list_item"
        android:descendantFocusability="blocksDescendants"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/listItemHeight"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:focusable="false"
                android:gravity="center_vertical|left"
                android:text="@string/fragment_item_theme_theme"
                android:textColor="@color/black"
                android:textSize="@dimen/mainText" />

            <TextView android:id="@+id/tv_fragment_setting_theme_summary"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:focusable="false"
                android:gravity="center_vertical|left"
                android:text="@string/theme_default"
                android:textColor="@color/summary"
                android:textSize="@dimen/summaryText" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/multitask_triangle"/>

    </RelativeLayout>

    <include layout="@layout/divider_horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <RelativeLayout android:id="@+id/rl_fragment_setting_chart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/listItemHeight"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight"
        android:orientation="vertical"
        android:background="@drawable/selector_list_item"
        android:descendantFocusability="blocksDescendants"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/listItemHeight"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:focusable="false"
                android:gravity="center_vertical|left"
                android:text="@string/fragment_item_theme_chart"
                android:textColor="@color/black"
                android:textSize="@dimen/mainText" />

            <TextView android:id="@+id/tv_fragment_setting_chart_summary"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:focusable="false"
                android:gravity="center_vertical|left"
                android:text="@string/chart_default"
                android:textColor="@color/summary"
                android:textSize="@dimen/summaryText" />
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/multitask_triangle"/>
    </RelativeLayout>
    <include layout="@layout/divider_horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</LinearLayout>